# lambda

./: .clang-format  .gitignore  CMakeLists.txt  TODO.txt  lambda-calculus.sln  lcxx.md
include/lambda/: ast.h  parse_ast.h  typed_ast.h
include/ub/: checked_iterators.h  shared_string.h  utility.h
include/ublib/: checked_iterators.h  failure.h  shared_string.h  utility.h
lambda-calculus/: TODO.txt  lambda-calculus.vcxproj  lambda-calculus.vcxproj.filters
lambda-calculus/include/lambda/: typed_ast.h
lambda-calculus/include/ub/: checked_iterators.h  macros.h
lambda-calculus/source/: main.cpp
lambda-calculus/source/lambda/: parse_ast.cpp  typed_ast.cpp
source/: main.cpp
source/lambda/: ast.cpp  parse_ast.cpp  typed_ast.cpp
source/ublib/: shared_string.cpp
